# weather_etl

./: .gitignore  .pre-commit-config.yaml  README.md  dagster_cloud.yaml  pyproject.toml
.github/workflows/: branch_deployments.yml  deploy.yml
src/quickstart_etl/: definitions.py
src/quickstart_etl/defs/: assets.py  models.py  resources.py
src/weather_etl/: definitions.py  lake_path.py  models.py
src/weather_etl/defs/: assets.py  ops.py  resources.py
terraform/: iam.tf  outputs.tf  s3.tf
tests/: test_assets.py  test_defs.py
tests/samples/: actual_weather_20251201.parquet  current_weather_20251129.parquet  hourly_forecast_20251129.parquet  hourly_forecast_20251201.parquet
