[project]
name = "weather_etl"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-cloud",
    "httpx>=0.28.1",
    "dagster-aws>=0.28.3",
    "polars>=1.35.2",
    "fsspec>=2025.9.0",
    "s3fs>=2025.9.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[s3]>=1.41.5",
    "dagster-dg-cli>=1.11.11",
    "dagster-webserver",
    "pre-commit>=4.5.0",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "weather_etl.definitions"
code_location_name = "weather_etl"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "weather_etl"
