[project]
name = "weather_etl"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-cloud",
    "httpx>=0.28.1",
    "dagster-aws>=0.28.3",
    "polars>=1.35.2",
    "fsspec>=2025.9.0",
    "s3fs>=2025.9.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[s3]>=1.41.5",
    "dagster-dg-cli>=1.11.11",
    "dagster-webserver",
    "moto[s3]>=5.1.17",
    "pre-commit>=4.5.0",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "weather_etl.definitions"
code_location_name = "weather_etl"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "weather_etl"

[tool.ruff]
target-version = "py312"
line-length = 115

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__.py

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
fail-under = 80
exclude = ["tests", "__pycache__", ".venv", "__init__.py"]
verbose = 1
